# monorepo-eligo

./: .gitignore  CLAUDE.md  README.md  vision.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml  run.sh
backend/app/: __init__.py  main.py  seed.py
backend/app/agents/: __init__.py  base.py  document_extraction.py  enrichment.py  market_map.py  matching_agent.py  outreach.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  auth.py  config.py  database.py  logging.py
backend/app/domain/: __init__.py  registry.py
backend/app/domain/candidates/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domain/common/: __init__.py  enums.py  mixins.py  types.py
backend/app/domain/companies/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domain/documents/: __init__.py  gate.py  models.py  parser.py  router.py  schemas.py  service.py
backend/app/domain/documents/extraction/: __init__.py  base.py  factory.py  heuristic.py  openai_extractor.py
backend/app/domain/jobs/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domain/matching/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domain/pipeline/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/domain/reporting/: __init__.py  router.py  schemas.py  service.py
backend/app/domain/tenants/: __init__.py  models.py  service.py
backend/app/domain/verification/: __init__.py  models.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_candidate_profile_fields.py  0002_tenants_table.py  0003_row_level_security.py  0004_candidate_documents.py  0005_rls_documents_matchreceipts.py  0006_tenants_rls_policy.py
backend/scripts/: apply_rls.py  assign_tenant.py  repopulate_cvs.py  seed_jobs.py
backend/tests/: conftest.py  test_candidate_update.py  test_documents.py  test_health.py
frontend/: .env.example  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: adapters.ts  client.ts  types.ts
frontend/src/auth/: AuthGate.tsx  ClerkTokenBridge.tsx  config.ts
frontend/src/components/: Breadcrumb.tsx  Logo.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/components/ui/: Avatar.tsx  DataSourceBadge.tsx  LinkedInMark.tsx  SkillBadge.tsx  VerificationScore.tsx
frontend/src/data/: candidates.ts  pipeline.ts  reporting.ts  types.ts
frontend/src/features/candidates/: CandidateDossier.tsx  CandidatesView.tsx  CvUploadModal.tsx  DossierEditor.tsx
frontend/src/features/matching/: MatchStrengthBadge.tsx  MatchingView.tsx
frontend/src/features/pipeline/: PipelineView.tsx
frontend/src/features/reporting/: PieChart.tsx  ReportingView.tsx
frontend/src/hooks/: useAsync.ts
frontend/src/landing/: LandingPage.tsx  landing.css
frontend/src/lib/: cn.ts
